--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@ $(document).ready(function () {
     <li>
       <a href="exploratory1.html">Exploring Activity Trends and Patterns Using EDA</a>
     </li>
+    <li>
+      <a href="exploratory2.html">Exploring NYC Crime Data Using EDA</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -222,6 +225,9 @@ $(document).ready(function () {
   <ul class="dropdown-menu" role="menu">
     <li>
       <a href="ordinalmodel.html">Analyzing Likert Scale of Depressive Symptoms</a>
+    </li>
+    <li>
+      <a href="felonies.html">Differences in Mean Length of NYC Felonies</a>
     </li>
   </ul>
 </li>
@@ -297,15 +303,24 @@ font-weight: bold;
 }
 
 </style>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137778138-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137778138-1');
+</script>
 <p><br></p>
 <div id="jacky-choi" class="section level2">
 <h2>Jacky Choi</h2>
 <p><link rel="stylesheet" href="styles.css" type="text/css"> <link rel="stylesheet" href="academicons/css/academicons.min.css"/></p>
-<p>MPH Graduate Student <br> <a href="https://www.mailman.columbia.edu/become-student/departments/epidemiology">Department of Epidemiology</a> <br> Applied Biostatistics Certificate <br> Columbia University Mailman School of Public Health</p>
+<p>MPH Candidate <br> <a href="https://www.mailman.columbia.edu/become-student/departments/epidemiology">Department of Epidemiology</a> <br> Applied Biostatistics Certificate <br> Columbia University Mailman School of Public Health</p>
 <p><br></p>
 <div id="about-me" class="section level4">
 <h4>About Me</h4>
-<p>I am currently a second-year graduate student in the Department of Epidemiology at the Mailman School of Public Health at Columbia University pursuing an Applied Biostatistics certificate. My academic coursework has been geared heavily toward foundational biostatistical skills using various statistical programs and languages, while my experience has involved working with various aspects of data (including data acquisition, cleaning, management, analysis, and reporting) in relation to health research. Taken together, I believe I am a formidable candidate for data scientist, analyst, and biostatistician positions. I am currently seeking these positions, or any that sufficiently develops my analytic mindset, programming/coding capability, biostatistical skills, and/or knowledge of research methods.</p>
+<p>I am currently a second-year graduate student in the Department of Epidemiology at the Mailman School of Public Health at Columbia University pursuing an Applied Biostatistics certificate. My academic coursework has been geared heavily toward foundational biostatistical skills using various statistical programs and languages, while my experience has involved working with various aspects of data (including data acquisition, cleaning, management, analysis, and reporting) in relation to health research. Taken together, I believe I am a formidable candidate for data scientist, analyst, programmer, and biostatistician positions. I am currently seeking these positions, or any that sufficiently develops my analytic mindset, programming/coding capability, biostatistical skills, and/or knowledge of research methods.</p>
 <p>To view my resume, you can click <a href="images/resume_nosite.pdf">here</a>.</p>
 <p><br></p>
 </div>
