--- a/exploratory2_cleaning.html
+++ b/exploratory2_cleaning.html
@@ -426,17 +426,8 @@ $(document).ready(function() {
 <p>Below, we include the code we used to import and clean the data for the “Exploring NYC Crime Data Using EDA” project:</p>
 <pre class="r"><code>library(RSocrata)</code></pre>
 <pre><code>## Warning: package &#39;RSocrata&#39; was built under R version 3.5.3</code></pre>
-<pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## -- Attaching packages -------------------------------------------------------------------------------------- tidyverse 1.2.1 --</code></pre>
-<pre><code>## v ggplot2 3.0.0     v purrr   0.2.5
-## v tibble  2.1.1     v dplyr   0.7.6
-## v tidyr   0.8.1     v stringr 1.3.1
-## v readr   1.1.1     v forcats 0.3.0</code></pre>
-<pre><code>## Warning: package &#39;tibble&#39; was built under R version 3.5.3</code></pre>
-<pre><code>## -- Conflicts ----------------------------------------------------------------------------------------- tidyverse_conflicts() --
-## x dplyr::filter() masks stats::filter()
-## x dplyr::lag()    masks stats::lag()</code></pre>
-<pre class="r"><code>library(lubridate)</code></pre>
+<pre class="r"><code>library(tidyverse)
+library(lubridate)</code></pre>
 <pre><code>## 
 ## Attaching package: &#39;lubridate&#39;</code></pre>
 <pre><code>## The following object is masked from &#39;package:base&#39;:
