Updates to 8th Project

--- a/felonies.html
+++ b/felonies.html
@@ -424,6 +424,8 @@ $(document).ready(function() {
 <div id="skills" class="section level3">
 <h3>Skills</h3>
 <ul>
+<li>Data Analysis</li>
+<li>ANOVA</li>
 <li>R</li>
 <li>Statistical Analysis</li>
 </ul>
