--- a/exploratory2_cleaning.html
+++ b/exploratory2_cleaning.html
@@ -516,6 +516,46 @@ sex_drug_weapons = nyc_felonies %&gt;%
 <pre class="r"><code>felonies = readRDS(file = &quot;./data/sex_drug_weapons.rds&quot;)
 
 summary(felonies)</code></pre>
+<pre><code>##   cmplnt_num          boro_nm           cmplnt_fr_dt                
+##  Length:46692       Length:46692       Min.   :2014-01-01 00:00:00  
+##  Class :character   Class :character   1st Qu.:2015-01-15 00:00:00  
+##  Mode  :character   Mode  :character   Median :2016-01-16 00:00:00  
+##                                        Mean   :2016-01-03 21:27:52  
+##                                        3rd Qu.:2016-12-22 00:00:00  
+##                                        Max.   :2017-12-31 00:00:00  
+##                                                                     
+##   cmplnt_to_dt                 cmplnt_fr_tm          ky_cd          
+##  Min.   :2014-01-01 00:00:00   Length:46692       Length:46692      
+##  1st Qu.:2015-02-05 00:00:00   Class :character   Class :character  
+##  Median :2016-02-09 00:00:00   Mode  :character   Mode  :character  
+##  Mean   :2016-01-19 07:31:50                                        
+##  3rd Qu.:2017-01-08 00:00:00                                        
+##  Max.   :2017-12-31 00:00:00                                        
+##  NA&#39;s   :9108                                                       
+##   ofns_desc            pd_cd             pd_desc         
+##  Length:46692       Length:46692       Length:46692      
+##  Class :character   Class :character   Class :character  
+##  Mode  :character   Mode  :character   Mode  :character  
+##                                                          
+##                                                          
+##                                                          
+##                                                          
+##    vic_race           vic_sex          vic_age_group           year     
+##  Length:46692       Length:46692       Length:46692       Min.   :2014  
+##  Class :character   Class :character   Class :character   1st Qu.:2015  
+##  Mode  :character   Mode  :character   Mode  :character   Median :2016  
+##                                                           Mean   :2016  
+##                                                           3rd Qu.:2016  
+##                                                           Max.   :2017  
+##                                                                         
+##  prem_typ_desc      crime_group       
+##  Length:46692       Length:46692      
+##  Class :character   Class :character  
+##  Mode  :character   Mode  :character  
+##                                       
+##                                       
+##                                       
+## </code></pre>
 </div>
 </div>
 
