--- a/index.html
+++ b/index.html
@@ -329,11 +329,12 @@ font-weight: bold;
 <p><strong>I built this website using R and GitHub (with a bit of CSS and HTML) to showcase some of the projects that I have worked on over the past couple of years.</strong> I incorporated projects that highlight my various competencies, including:</p>
 <ul>
 <li>Usage of various statistical programs and/or languages (e.g., R, SAS, SQL)</li>
-<li>Ability to write scientific or research papers</li>
+<li>Fluency in data science skills - EDA, data wrangling, data visualization</li>
 <li>Understanding of how to clean, manipulate, and analyze data</li>
 <li>Knowledge of how to apply various regression techniques and interpret models (e.g., linear, logistic)</li>
+<li>Ability to write scientific or research papers</li>
 </ul>
-<p>Note that all projects use hypothetical data, with the exception of the NHANES projects.</p>
+<p>Note that all projects use hypothetical data, with the exception of the NHANES and NYC Crime projects.</p>
 <p><br></p>
 </div>
 <div id="contact-information" class="section level4">
